2018-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Reduce memory consumption further.
	Hopefully fixes oss-fuzz 8013 "graphicsmagick/coder_XPM_fuzzer:
	Out-of-memory in graphicsmagick_coder_XPM_fuzzer". (Credit to
	OSS-Fuzz)

	* magick/utility.c (StringToList): Only allocate the memory
	required when converting string to an ASCII list.  May or may not
	fix oss-fuzz 8013 "graphicsmagick/coder_XPM_fuzzer: Out-of-memory
	in graphicsmagick_coder_XPM_fuzzer". (Credit to OSS-Fuzz)

2018-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix benign use of uninitialized
	data when testing header magick.  Fixes oss-fuzz 7980
	"graphicsmagick/coder_BMP_fuzzer: Use-of-uninitialized-value in
	LocaleNCompare". (Credit to OSS-Fuzz)

	* coders/dpx.c (ReadDPXImage): ColorDifferenceCbCr does require
	even image width. Fixes oss-fuzz 7966
	"graphicsmagick/coder_DPX_fuzzer: Unknown signal in
	TentUpsampleChroma". (Credit to OSS-Fuzz)

2018-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): ColorDifferenceCbCr element
	requires two samples/pixel, not one. Fixes oss-fuzz 7951
	"graphicsmagick/coder_DPX_fuzzer: Heap-buffer-overflow in
	ReadDPXImage". (Credit to OSS-Fuzz)

2018-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (ReadPDBImage): Assure that pixels buffer is
	initialized.  Fixes oss-fuzz 7937
	"graphicsmagick/coder_PDB_fuzzer: Use-of-uninitialized-value in
	ReadPDBImage". (Credit to OSS-Fuzz)

	* coders/mvg.c (ReadMVGImage): Assure that MVG viewbox parameters
	were supplied.  Fixes oss-fuzz 7936
	"graphicsmagick/coder_MVG_fuzzer: Use-of-uninitialized-value in
	ReadMVGImage". (Credit to OSS-Fuzz)

	* coders/dpx.c (ReadDPXImage): Element descriptors CbYCrY422 and
	CbYACrYA4224 require that the image width be evenly divisible by 2
	so enforce that.  Fixes oss-fuzz 7935
	"graphicsmagick/coder_DPX_fuzzer: Heap-buffer-overflow in