@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180426"
-#define public MagickPackageReleaseDate "snapshot-20180426"
+#define public MagickPackageVersionAddendum ".020180427"
+#define public MagickPackageReleaseDate "snapshot-20180427"
