@@ -1,3 +1,10 @@
+2018-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/xpm.c (StringToListMod): Algorithm fixes to fix use of
+	uninitialized data.  Fixes oss-fuzz 8046
+	"graphicsmagick/coder_XPM_fuzzer: Use-of-uninitialized-value in
+	StringToListMod". (Credit to OSS-Fuzz)
+
 2018-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xpm.c (ReadXPMImage): Reduce memory consumption further.
